// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pagination /> should handle "onChange" prop 1`] = `
<Pagination
  current={23}
  onChange={[MockFunction]}
  total={123}
>
  <BasePagination
    current={23}
    onButtonClick={[Function]}
    total={123}
  >
    <div
      className="base-pagination-wrapper"
    >
      <PageButton
        aria-label="Назад"
        className="M-r__2"
        onClick={[Function]}
        page={22}
        rounded="all"
      >
        <button
          aria-label="Назад"
          className="page-button rounds-all M-r__2"
          onClick={[Function]}
          page={22}
          type="button"
        >
          <ForwardRef(LeftSVG)
            className="icon"
          >
            <svg
              className="icon"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M9.659 3.247a1 1 0 01.094 1.412L6.829 8l2.924 3.341a1 1 0 01-1.506 1.318l-3.5-4a1 1 0 010-1.317l3.5-4a1 1 0 011.412-.095z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(LeftSVG)>
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 1"
        key="0"
        onClick={[Function]}
        page={1}
        rounded="left"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 1"
          className="page-button rounds-left"
          onClick={[Function]}
          page={1}
          type="button"
        >
          1
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 21"
        key="1"
        onClick={[Function]}
        page={21}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 21"
          className="page-button"
          onClick={[Function]}
          page={21}
          type="button"
        >
          ...
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 22"
        key="2"
        onClick={[Function]}
        page={22}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 22"
          className="page-button"
          onClick={[Function]}
          page={22}
          type="button"
        >
          22
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 23"
        key="3"
        onClick={[Function]}
        page={23}
        rounded="none"
        selected={true}
      >
        <button
          aria-label="Перейти на страницу 23"
          className="page-button selected"
          onClick={[Function]}
          page={23}
          type="button"
        >
          23
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 24"
        key="4"
        onClick={[Function]}
        page={24}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 24"
          className="page-button"
          onClick={[Function]}
          page={24}
          type="button"
        >
          24
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 25"
        key="5"
        onClick={[Function]}
        page={25}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 25"
          className="page-button"
          onClick={[Function]}
          page={25}
          type="button"
        >
          25
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 26"
        key="6"
        onClick={[Function]}
        page={26}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 26"
          className="page-button"
          onClick={[Function]}
          page={26}
          type="button"
        >
          ...
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 123"
        key="7"
        onClick={[Function]}
        page={123}
        rounded="right"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 123"
          className="page-button rounds-right"
          onClick={[Function]}
          page={123}
          type="button"
        >
          123
        </button>
      </PageButton>
      <PageButton
        aria-label="Вперед"
        className="M-l__2"
        onClick={[Function]}
        page={24}
        rounded="all"
      >
        <button
          aria-label="Вперед"
          className="page-button rounds-all M-l__2"
          onClick={[Function]}
          page={24}
          type="button"
        >
          <ForwardRef(RightSVG)
            className="icon"
          >
            <svg
              className="icon"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M6.341 12.753a1 1 0 01-.094-1.412L9.171 8 6.247 4.659a1 1 0 011.506-1.317l3.5 4a1 1 0 010 1.317l-3.5 4a1 1 0 01-1.412.094z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(RightSVG)>
        </button>
      </PageButton>
    </div>
  </BasePagination>
</Pagination>
`;

exports[`<Pagination /> should render without props 1`] = `
<Pagination
  current={3}
  total={15}
>
  <BasePagination
    current={3}
    onButtonClick={[Function]}
    total={15}
  >
    <div
      className="base-pagination-wrapper"
    >
      <PageButton
        aria-label="Назад"
        className="M-r__2"
        onClick={[Function]}
        page={2}
        rounded="all"
      >
        <button
          aria-label="Назад"
          className="page-button rounds-all M-r__2"
          onClick={[Function]}
          page={2}
          type="button"
        >
          <ForwardRef(LeftSVG)
            className="icon"
          >
            <svg
              className="icon"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M9.659 3.247a1 1 0 01.094 1.412L6.829 8l2.924 3.341a1 1 0 01-1.506 1.318l-3.5-4a1 1 0 010-1.317l3.5-4a1 1 0 011.412-.095z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(LeftSVG)>
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 1"
        key="0"
        onClick={[Function]}
        page={1}
        rounded="left"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 1"
          className="page-button rounds-left"
          onClick={[Function]}
          page={1}
          type="button"
        >
          1
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 2"
        key="1"
        onClick={[Function]}
        page={2}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 2"
          className="page-button"
          onClick={[Function]}
          page={2}
          type="button"
        >
          2
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 3"
        key="2"
        onClick={[Function]}
        page={3}
        rounded="none"
        selected={true}
      >
        <button
          aria-label="Перейти на страницу 3"
          className="page-button selected"
          onClick={[Function]}
          page={3}
          type="button"
        >
          3
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 4"
        key="3"
        onClick={[Function]}
        page={4}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 4"
          className="page-button"
          onClick={[Function]}
          page={4}
          type="button"
        >
          4
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 5"
        key="4"
        onClick={[Function]}
        page={5}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 5"
          className="page-button"
          onClick={[Function]}
          page={5}
          type="button"
        >
          5
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 6"
        key="5"
        onClick={[Function]}
        page={6}
        rounded="none"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 6"
          className="page-button"
          onClick={[Function]}
          page={6}
          type="button"
        >
          ...
        </button>
      </PageButton>
      <PageButton
        aria-label="Перейти на страницу 15"
        key="6"
        onClick={[Function]}
        page={15}
        rounded="right"
        selected={false}
      >
        <button
          aria-label="Перейти на страницу 15"
          className="page-button rounds-right"
          onClick={[Function]}
          page={15}
          type="button"
        >
          15
        </button>
      </PageButton>
      <PageButton
        aria-label="Вперед"
        className="M-l__2"
        onClick={[Function]}
        page={4}
        rounded="all"
      >
        <button
          aria-label="Вперед"
          className="page-button rounds-all M-l__2"
          onClick={[Function]}
          page={4}
          type="button"
        >
          <ForwardRef(RightSVG)
            className="icon"
          >
            <svg
              className="icon"
              height={16}
              viewBox="0 0 16 16"
              width={16}
            >
              <path
                clipRule="evenodd"
                d="M6.341 12.753a1 1 0 01-.094-1.412L9.171 8 6.247 4.659a1 1 0 011.506-1.317l3.5 4a1 1 0 010 1.317l-3.5 4a1 1 0 01-1.412.094z"
                fillRule="evenodd"
              />
            </svg>
          </ForwardRef(RightSVG)>
        </button>
      </PageButton>
    </div>
  </BasePagination>
</Pagination>
`;
